# src/main/resources/openapi/api-core-v1.yml
@@ -178,8 +178,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-                format: uuid
+                $ref: '#/components/schemas/CreateRouteResponse'
         '400':
           $ref: '#/components/responses/ValidationError'
         '401':
@@ -665,8 +664,8 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
         username:
           type: string
         email:
@@ -720,6 +719,19 @@ components:
           maxItems: 50
           items:
             $ref: '#/components/schemas/LocationDto'
+
+    CreateRouteResponse:
+      type: object
+      required:
+        - uuid
+        - imageUrl
+      properties:
+        uuid:
+          type: string
+          format: uuid
+        imageUrl:
+          type: string
+          format: uri
 
     UpdateRouteRequest:
       type: object
@@ -806,8 +818,8 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
         authorName:
           type: string
         rating:
